:bug: fix bug of app not running.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "no-more-coverletter",
+  "name": "no-more-cover-letter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
