--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^12.8.3",
     "eslint": "^7.30.0",
     "firebase": "^8.7.1",
+    "firebase-config": "^0.0.2",
+    "firebaseui": "^4.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebaseui": "^5.0.2",
     "react-redux": "^7.2.4",
     "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.2.0",
